# pga-analysis

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  EXAMPLES.md  INDEX.md  PROJECT_SUMMARY.md  README.md  SETUP.md  cli.py  docker-compose.yml  nginx.conf  package-lock.json  predict_outcomes.py  predict_tournament.py  pyproject.toml  requirements.txt  run.py
backend/app/: config.py  main.py  models.py
backend/app/routers/: data.py  explanations.py  predictions.py  rankings.py
backend/app/services/: __init__.py  course_fit.py  data.py  explanations.py  features.py  outcomes.py  ranking.py  scraper.py
backend/app/utils/: model_loader.py
backend/app/websockets/: __init__.py  ranking_stream.py
data/raw/courses/: course_characteristics.csv
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: FeatureImportance.tsx  PredictionForm.tsx  ProbabilityBar.tsx  RankingTable.tsx
frontend/src/hooks/: useApi.ts
frontend/src/pages/: Dashboard.tsx  Explanations.tsx  Predictions.tsx  Rankings.tsx
frontend/src/services/: api.ts
notebooks/: course_fit_analysis.py
src/: __init__.py  data_loader.py  data_preprocessor.py  explainer.py  feature_engineer.py  model.py  outcome_predictor.py  pga_scraper.py  pipeline.py  ranker.py  rolling_features.py
tests/: test_endpoints.py
