[project]
name = "pga-analysis"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pandas==2.0.3",
    "numpy==1.24.3",
    "scikit-learn==1.3.0",
    "xgboost==2.0.0",
    "lightgbm==4.0.0",
    "shap==0.42.1",
    "matplotlib==3.8.0",
    "seaborn==0.13.0",
    "plotly==5.17.0",
    "requests>=2.28.0",
    "lxml>=4.9.0",
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "python-multipart==0.0.6",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "python-dotenv==1.0.0",
    "websockets==12.0",
    "httpx==0.25.1",
]

[tool.vercel]
entrypoint = "backend.app.main:app"
